[package]
name = "test-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20", features = ["csr"]}
yew-router = "0.17"
js-sys = "0.3.60"
web-sys = "0.3.58"
log = "0.4"
wasm-logger = "0.2"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.3"